solve source path issue
Since the source files are in src directory, the build script
and autotools file had to be adapted to search in the correct place.
By default autotools search in . and ..

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 #AC_PREREQ(2.60)
 AC_INIT(can-box, 0.1, flaviu.nistor@gmail.com)
-AC_CONFIG_SRCDIR([main.c])
+AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE(can-box, main)
 
