add files for logging option
create initial c and h files for logging
add build support to include the new created source file

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 
 CFLAGS = -g -fPIE -Wall
-LDFLAGS  = -pie -lusb-1.0
+LDFLAGS  = -pie 
 
 bin_PROGRAMS = can-box
-can_box_SOURCES = src/main.c src/serial.c src/can.c
-can_box_LDADD = -lsocketcan
+can_box_SOURCES = src/main.c src/serial.c src/can.c src/log.c
+can_box_LDADD = -lsocketcan -lusb-1.0
